# OilPastel

./: CMakeLists.txt  GLCanvas.cpp  GLCanvas.h  GLUtils.cpp  GLUtils.h  Image.cpp  Image.h  OilPastelWindow.cpp  OilPastelWindow.h  OilPastelWindow.ui  Operations.cpp  Operations.h  README.md  Stroke.cpp  Stroke.h  main.cpp
routines/: BlitImage.cpp  BlitImage.h  Blur.cpp  Blur.h  CompNorm.cpp  CompNorm.h  DrawLighted.cpp  DrawLighted.h  DrawTexture.cpp  DrawTexture.h  DrawThickness.cpp  DrawThickness.h  StrokeBlend.cpp  StrokeBlend.h  StrokeDrawCurve.cpp  StrokeDrawCurve.h  StrokeDrawTriangles.cpp  StrokeDrawTriangles.h
